kubernetes/ufoo/50-payload/hajimari/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari-http
  namespace: hajimari
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: >-
        Host(`hajimari.agrrh.com`) || Host(`hajimari.5426b488.nip.io`)
      middlewares:
        - name: whitelist
          namespace: hajimari
      services:
        - kind: Service
          name: hajimari
          namespace: hajimari
          port: 3000

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whitelist
  namespace: hajimari
spec:
  ipWhiteList:
    sourceRange:
      # - 127.0.0.1/32
      # - 10.0.40.0/24
      - 10.0.55.0/24
